# jvd

./: .factorypath  .flake8  .gitattributes  .gitignore  .gitmodules  .project  README.md  pom.xml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_ghidra_jar.yml  capa-ghidra-test.yml  capa-test.yml  decompile-capa-rules.yml  ghidra-jar.yml  maven.yml  release.yml  src-lexer-ast.yml  stylomatrix.yml  test_decompile.yml  test_disassembler.yml  test_lexer.yml  test_stylomatrix.yml  test_vex.yml  vex.yml
ghidra/: .gitignore  pom.xml
jvd/: __init__.py  __main__.py  client.py  disassembler.py  labelers.py  resources.py  src.py  sym.py  unpackers.py  utils.py
jvd/capa/: __init__.py  block.py  data.py  extractor.py  file.py  function.py  ins.py
jvd/feeds/: arch.py  mbz.py
jvd/ghidra/: __init__.py  decompiler.py  dependencies.py
jvd/ida/: ida.py  ida_script.py  ida_utils.py
jvd/installer/: __init__.py  install.py
jvd/normalizer/: libc.py  metapc.json  normalizer_dp.py  syntax.py
jvd/src/: __init__.py  defines.py
jvd/stylomatrix/: __init__.py
jvd/unpacker/: __init__.py  p7zip.py  upx.py
package/: .gitignore  MANIFEST.in  requirements.txt  setup.py
package/jvd/: __init__.py  __main__.py  disassembler.py  src.py  src.sc  unpack.py  utils.py
pywrap/: .gitignore  README.md  setup.py
test/: .gitignore  test_capa_ghidra.py  test_disassembler.py  test_ghidra_capa_features.py  test_ida_capa_features.py  test_jv_compatibility.py  test_jv_disassembler.py  test_src.py  test_stylomatrix.py  test_vex.py
(+43 files in other folders)
