[tool.poetry]
name = "jvd"
version = "0.2.0"
description = "Unified disassembler for JARV1S/Kam1n0"
authors = ["Steven Ding <steven-hh-ding@users.noreply.github.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
tqdm = "^4.65.0"
pytz = "^2023.3"
python-dateutil = "^2.8.2"
python-magic = "^0.4.27"
flare-capa = "^5.1.0"
Pygments = "^2.15.1"
javalang = "^0.13.0"
pydot = "^1.4.2"
networkx = "2.5.1"
psutil = "^5.9.5"
angr = "^9.2.56"
numpy = "^1.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = "test_capa"
